chore: circle-ci and jacoco